--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div id="cartoon-btns">
   </div>
 
-  <form id="cartoon-form">
+  <form id="cartoon-form" autocomplete="off">
     <label for="cartoon-input">Add a cartoon</label>
     <input type="text" id="cartoon-input"><br>
     <input id="add-cartoon" type="submit" value="Submit">
